// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of table header checkbox cell 1`] = `
<th
  className="table-heading-cell table-checkbox-cell"
>
  <div
    className="pretty p-icon"
  >
    <input
      type="checkbox"
    />
    <div
      className="state p-info"
    >
      <i
        className="icon fal fa-check"
      />
      <label />
    </div>
  </div>
</th>
`;

exports[`Table header checkbox cell with a select all rows callback 1`] = `
<th
  className="table-heading-cell table-checkbox-cell"
>
  <div
    className="pretty p-icon"
  >
    <input
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="state p-info"
    >
      <i
        className="icon fal fa-check"
      />
      <label />
    </div>
  </div>
</th>
`;

exports[`Table header checkbox cell with all rows selected 1`] = `
<th
  className="table-heading-cell table-checkbox-cell"
>
  <div
    className="pretty p-icon"
  >
    <input
      checked={true}
      type="checkbox"
    />
    <div
      className="state p-info"
    >
      <i
        className="icon fal fa-check"
      />
      <label />
    </div>
  </div>
</th>
`;
